# radiance

./: .gitignore  CMakeLists.txt  README.md
assets/scenes/aabb_test/: aabb_test2.xml
assets/scenes/buddha/: buddha_test.xml
assets/scenes/bunny/: bunny_plastic_floor_view_high.xml  bunny_plastic_floor_view_low.xml  bunny_plastic_floor_view_mid.xml  bunny_test.xml  bunny_test_tex.xml
assets/scenes/cbox/: cbox_area_light.xml  cbox_area_light_spheres_test.xml  cbox_point_light_test.xml
assets/scenes/custom/: test0.xml  test1.xml  transform_test.xml
assets/scenes/dragon/: dragon.xml  dragon2.xml
assets/scenes/head/: head2.xml
assets/scenes/hw1_spheres/: scene0.xml
assets/scenes/hw2_triangles/: single_triangle_test.xml  tetrahedron2.xml
assets/scenes/monkey/: cube.xml  monkey.xml
assets/scenes/party/: party2.xml
assets/scenes/teapot/: teapot_constant.xml  teapot_constant2.xml  teapot_textured.xml
assets/scenes/texture_test/: texture2.xml  texture_scaled2.xml
examples/: antialiasing.cpp  basic_diffuse_shadows.cpp  example_antialiasing.cpp  example_basic_diffuse_shadows.cpp  example_glass.cpp  example_many_spheres.cpp  example_mesh_load.cpp  example_mirror.cpp  example_tri.cpp  mirror.cpp
output/: out_0.ppm
src/: main.cpp  settings.h  settings.h.in
src/acceleration/: bvh.cpp  bvh.h
src/cameras/: perspective.cpp  perspective.h  perspective_camera.cpp  perspective_camera.h
src/geometry/: aabb.cpp  aabb.h  hit.cpp  hit.h  scene.cpp  scene.h  sphere.cpp  sphere.h  tri.cpp  tri.h  tri_mesh.cpp  tri_mesh.h  triangle.cpp  triangle.h
src/io/: image.cpp  image.h  log.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/lights/: point_light.h
src/materials/: diffuse.cpp  diffuse.h  diffuse_emitter.cpp  diffuse_emitter.h  glass.cpp  glass.h  material.cpp  material.h  metal.cpp  metal.h  mirror.cpp  mirror.h  plastic.cpp  plastic.h  texture.cpp  texture.h
src/math/: matrix.cpp  matrix.h  rand.cpp  rand.h  ray.cpp  ray.h  transform.cpp  transform.h  util.cpp  util.h  vec.cpp  vec.h
src/misc/: timer.cpp  timer.h
src/scene/: scene.cpp  scene.h
